<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_network_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/error_message" />

    <ProgressBar
        android:id="@+id/detail_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center" />

    <com.nirhart.parallaxscroll.views.ParallaxScrollView
        android:id="@+id/detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/parent_Detail_Activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.nikhil.popularmovies.DetailActivity">

            <ImageView
                android:id="@+id/detail_imageView_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_play_circle_filled_black_24dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/detail_cardView_movie_poster_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="170dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="10dp">

                <ImageView
                    android:id="@+id/detail_imageView_movie_poster_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    tools:background="#000000"
                    tools:layout_height="90dp"
                    tools:layout_width="50dp" />

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/detail_textView_movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_imageView_movie_poster"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/detail_cardView_movie_poster_small"
                android:paddingRight="10dp"
                android:textColor="#424242"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="MovieTitle" />

            <ToggleButton
                android:id="@+id/detail_toggleButton_movie_favourite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/detail_imageView_movie_poster"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_favorite_border"
                android:textOff=""
                android:textOn="" />

            <LinearLayout
                android:id="@+id/layout_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_textView_movie_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/tools_movie_rating"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/detail_textView_movie_rating_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:maxHeight="30dp"
                    android:maxWidth="50dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    tools:text="8.0" />

                <TextView
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/darker_gray"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detail_textView_movie_rating_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    tools:text="100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:text="times"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_time_and_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_rating"
                android:layout_toRightOf="@id/detail_cardView_movie_poster_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_textView_movie_runtime_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    tools:text="108" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/time_min"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="2dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detail_textView_movie_releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    tools:text="June 3, 2017" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_recyclerView_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_time_and_date"
                android:layout_marginTop="7dp"
                android:layout_toRightOf="@id/detail_cardView_movie_poster_small" />

            <TextView
                android:id="@+id/textView_movie_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_recyclerView_genre"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/tools_movie_plot"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_textView_movie_overview_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_movie_overview_title"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:textColor="#757575"
                android:textSize="18sp" />


            <android.support.design.widget.TabLayout
                android:id="@+id/detail_movie_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_textView_movie_overview_value"
                android:background="@color/colorPrimary"
                app:tabGravity="fill"
                app:tabIndicatorColor="#000000"
                app:tabMode="fixed"
                app:tabSelectedTextColor="#ffffff"
                app:tabTextColor="#000000" />

            <android.support.v4.view.ViewPager
                android:id="@+id/detail_movie_viewpager"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_below="@id/detail_movie_tabs" />

            <TextView
                android:id="@+id/textView_movie_reviews_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_movie_viewpager"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/tools_movie_user_reviews"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_recyclerView_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_movie_reviews_title" />

        </RelativeLayout>

    </com.nirhart.parallaxscroll.views.ParallaxScrollView>
</RelativeLayout>